Fix dark mode for dropdown

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -165,5 +165,31 @@ body.dark {
 		}
 	}
 
+	// Dropdown styles for dark mode
+	.dropdown-menu {
+		background-color: $gray-800;
+		border-color: $gray-700;
+
+		.dropdown-item {
+			color: $light;
+
+			&:hover,
+			&:focus {
+				color: $light;
+				background-color: $gray-700;
+			}
+
+			&.active,
+			&:active {
+				color: $white;
+				background-color: $primary;
+			}
+		}
+
+		.dropdown-divider {
+			border-top-color: $gray-700;
+		}
+	}
+
 	// Add more dark mode styles as needed
 }
